--- a/yaml-plus.cabal
+++ b/yaml-plus.cabal
@@ -10,7 +10,7 @@ name:                yaml-plus
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
 --                   | | | +--- code changes with no API change
-version:             1.0.0.0
+version:             1.0.0.1
 
 -- A short (one-line) description of the package.
 synopsis:            Utilities for working with YAML
@@ -64,7 +64,7 @@ library
   -- Other library packages from which modules are imported.
   build-depends:     aeson, base, base-unicode-symbols, bytestring, data-textual
                    , lens, ListLike, mtl, scientific, tasty, tasty-hunit, text
-                   , text-printer, unordered-containers, yaml
+                   , text-printer, unordered-containers, utf8-string, yaml
 
                    , fluffy >= 0.2.13.2, fpath >= 1.0.3.1
                    , monaderror-io >= 1.0.2.0, more-unicode >= 0.0.9.0
