--- a/yaml-plus.cabal
+++ b/yaml-plus.cabal
@@ -10,7 +10,7 @@ name:                yaml-plus
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
 --                   | | | +--- code changes with no API change
-version:             1.0.0.1
+version:             1.0.0.2
 
 -- A short (one-line) description of the package.
 synopsis:            Utilities for working with YAML
@@ -66,9 +66,12 @@ library
                    , lens, ListLike, mtl, scientific, tasty, tasty-hunit, text
                    , text-printer, unordered-containers, utf8-string, yaml
 
-                   , fluffy >= 0.2.13.2, fpath >= 1.0.3.1
-                   , monaderror-io >= 1.0.2.0, more-unicode >= 0.0.9.0
-                   , tasty-plus >= 1.1.0.0, tfmt >= 0.2.1.0
+                   , fluffy        >= 0.2.14.0
+                   , fpath         >= 1.1.3.0
+                   , monaderror-io >= 1.0.6.0
+                   , more-unicode  >= 0.0.13.0
+                   , tasty-plus    >= 1.3.0.0
+                   , tfmt          >= 0.2.4.0
 
   -- Directories containing source files.
   hs-source-dirs:      src
