--- a/yaml-plus.cabal
+++ b/yaml-plus.cabal
@@ -10,7 +10,7 @@ name:                yaml-plus
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
 --                   | | | +--- code changes with no API change
-version:             1.0.0.2
+version:             1.0.0.3
 
 -- A short (one-line) description of the package.
 synopsis:            Utilities for working with YAML
@@ -55,7 +55,7 @@ library
                      , YamlPlus.T.Tests
 
   -- modules included in this library but not exported.
-  other-modules:     
+  other-modules:
 
   default-extensions: NoImplicitPrelude
   -- LANGUAGE extensions used by modules in this package.
@@ -66,11 +66,11 @@ library
                    , lens, ListLike, mtl, scientific, tasty, tasty-hunit, text
                    , text-printer, unordered-containers, utf8-string, yaml
 
-                   , fluffy        >= 0.2.14.0
-                   , fpath         >= 1.1.3.0
-                   , monaderror-io >= 1.0.6.0
-                   , more-unicode  >= 0.0.13.0
-                   , tasty-plus    >= 1.4.2.0
+                   , fpath         >= 1.1.4.1
+                   , monaderror-io >= 1.1.0.1
+                   , more-unicode  >= 0.0.15.0
+                   , natural       >= 0.0.1.0
+                   , tasty-plus    >= 1.5.0.1
                    , tfmt          >= 0.2.4.0
 
   -- Directories containing source files.
