--- a/yaml-plus.cabal
+++ b/yaml-plus.cabal
@@ -10,7 +10,7 @@ name:                yaml-plus
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
 --                   | | | +--- code changes with no API change
-version:             1.0.0.3
+version:             1.0.1.0
 
 -- A short (one-line) description of the package.
 synopsis:            Utilities for working with YAML
@@ -58,6 +58,9 @@ library
   other-modules:
 
   default-extensions: NoImplicitPrelude
+                    , OverloadedStrings
+                    , UnicodeSyntax
+
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
 
@@ -66,11 +69,12 @@ library
                    , lens, ListLike, mtl, scientific, tasty, tasty-hunit, text
                    , text-printer, unordered-containers, utf8-string, yaml
 
-                   , fpath         >= 1.1.4.1
-                   , monaderror-io >= 1.1.0.1
+                   , fpath         >= 1.1.4.2
+                   , has-callstack >= 1.0.1.0
+                   , monaderror-io >= 1.1.1.0
                    , more-unicode  >= 0.0.15.0
                    , natural       >= 0.0.1.0
-                   , tasty-plus    >= 1.5.0.1
+                   , tasty-plus    >= 1.5.0.2
                    , tfmt          >= 0.2.4.0
 
   -- Directories containing source files.
